# Laboratorio-1-Sistemas-Embebidos

./: README.md
Laboratorio1/: CMakeLists.txt  Makefile  README.md  battlefs  generate_files.py  programa
Laboratorio1/Debug/: CMakeCache.txt  Makefile  battlefs  battlefs.cbp  cmake_install.cmake
Laboratorio1/src/: compression.c  compression.h  file_loader.c  filesystem.c  filesystem.h  main.c  tree.c  tree.h
